# AI-CommerceWorkspace

./: LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/api/endpoints/: agents.py  health.py  workflows.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py
backend/app/db/: database.py
backend/app/models/: base.py
backend/app/schemas/: base.py
backend/app/services/swarm/: __init__.py  base.py  orchestrator.py  worker.py
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: index.css  router.tsx
frontend/src/components/hub/: TopNav.tsx
frontend/src/components/workspace/: WorkspaceSwitcher.tsx
frontend/src/pages/: DashboardPage.tsx  WorkspacePage.tsx
frontend/src/stores/: uiStore.ts  workspaceStore.ts
